# loom

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: db.rs  main.rs
app/: Cargo.toml  index.html
app/src/: main.rs
src/: auth.rs  db.rs  error.rs  main.rs  models.rs  serve.rs
static/css/: app.css
static/js/: app.js
templates/: index.html
