[package]
name = "loom"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0", features = ["with-axum"] }
askama_axum = { version = "0" }
axum = "0"
include_dir = "0"
mime_guess = "2"
serde = "1"
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono" ] }
thiserror = { version = "1" }
time = { version = "0", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0", features = ["trace"] }
tracing = "0"
tracing-subscriber = "0"
