[package]
name = "loom"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0"
askama = { version = "0", features = ["with-axum"] }
askama_axum = { version = "0" }
axum = { version = "0", features = ["headers"] }
axum-extra = { version = "0", features = ["cookie"] }
clap = { version = "3", features = ["derive"] }
cookie = "0"
include_dir = "0"
jsonwebtoken = "8"
mime_guess = "2"
once_cell = "1"
rand_core = { version = "0", features = ["std"] }
serde = "1"
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
thiserror = { version = "1" }
time = { version = "0", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0", features = ["trace"] }
tracing = "0"
tracing-subscriber = "0"

[profile.release]
strip = "debuginfo"
