[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.4", features = ["headers"] }
chrono = { version = "0", features = ["serde"] }
dotenv = "0"
include_dir = "0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono" ] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-subscriber = "0"
